crates/compiler/src/tests/e2e/bad/0040_integer_width_mismatch/main.gom

fn main() {
    let a: int32 = 42;
    let b: int64 = 42;
    if a == b {
        string_println("equal")
    } else {
        string_println("not equal")
    };
}
